refactor: restructure fridge & add database